--- a/src/layout/footer.html
+++ b/src/layout/footer.html
@@ -38,21 +38,21 @@
             <img src="assets/img/footer_logo.png">
         </div>
         <p class="footer-share">
-            <a href="#"><img src="assets/img/footer_fb.png"></a>
-            <a href="#"><img src="assets/img/footer_line.png"></a>
-            <a href="#"><img src="assets/img/footer_twitter.png"></a>
+            <a href="#"><img src="assets/img/facebook-icon.svg"></a>
+            <a href="#"><img src="assets/img/line-icon.svg"></a>
+            <a href="#"><img src="assets/img/twitter-icon.svg"></a>
         </p>
     </div>
     <div class="footer-subscribe">
         <input type="text" class="subscribeTerm" placeholder="E-mail">
-        <button type="submit" class="subscribeButton">
-            <p class="btn">訂閱電子報</p>
+        <button class="btn" type="submit" >
+            訂閱電子報
         </button>
     </div>
 </div>
 
 <div class="footer-copy">
-    <p class="tag">© 1111人力銀行2023幸福企業 All Rights Reserved.</p>
+    <p>© 1111人力銀行2023幸福企業 All Rights Reserved.</p>
     <a href="" class="tag">隱私權宣告</a>
     <a href="" class="tag">使用條款</a>
 </div>
