--- a/pro/assets/css/main.css
+++ b/pro/assets/css/main.css
@@ -69,15 +69,11 @@ table {
   border-spacing: 0;
 }
 
-<<<<<<< HEAD:pro/assets/css/main.css
 .application-wrapper .first-view .container {
   margin: auto;
 }
 
-.archive-tem .ad-area-wrapper .ad-area-container, .archive-tem .archive-tem-c, .article, .cardJob, card-job, nav {
-=======
-.archive-coverage-wrapper .archive-coverage-container, .category, .article, .cardJob, .cardJob-section, nav {
->>>>>>> 9be585abfe5fb9c5d8ee6d9821c825a9610b101d:pro/assets/css/main755cadb636d0f56cff43.css
+.application-wrapper .application-container .brand-list .container, .application-wrapper .application-container .info .container, .application-wrapper .application-container .brand-category .section-title, .archive-tem .ad-area-wrapper .ad-area-container, .archive-tem .archive-tem-c, .category, .article, .cardJob, .cardJob-section, nav {
   margin: auto;
   padding: 0 30px;
   max-width: 1920px;
@@ -92,15 +88,15 @@ table {
   display: inline-block;
 }
 
-.classBtn input, .pgnb-style2 .g-pagination select, .application-wrapper .first-view .container .btn, .application-wrapper .first-view, .archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .media-share .media-item a, .mobile-main-menu a, nav .main-menu li:hover > ul, nav .main-menu .dropdown-menu, nav .main-menu li:hover > a, nav .main-menu li:hover, nav .main-menu li a, nav .main-menu li, nav .main-menu a, nav .main-menu, nav .nav-brand img, nav .nav-brand, nav, header {
+.classBtn input, .pgnb-style2 .g-pagination select, .btn, .application-wrapper .first-view, .archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .media-share .media-item a, .mobile-main-menu a, nav .main-menu li:hover > ul, nav .main-menu .dropdown-menu, nav .main-menu li:hover > a, nav .main-menu li:hover, nav .main-menu li a, nav .main-menu li, nav .main-menu a, nav .main-menu, nav .nav-brand img, nav .nav-brand, nav, header {
   box-sizing: border-box;
 }
 
-.application-wrapper .first-view .container, .application-wrapper .first-view {
+.application-wrapper .application-container .brand-list .container .bottom .brand-info, .application-wrapper .first-view .container, .application-wrapper .first-view {
   position: relative;
 }
 
-.application-wrapper .first-view .container, .archive-tem .archive-tem-c {
+.application-wrapper .application-container .brand-list .container, .application-wrapper .application-container .brand-category .section-title, .application-wrapper .first-view .container, .archive-tem .archive-tem-c {
   text-align: center;
 }
 
@@ -675,13 +671,6 @@ nav .main-menu li:hover > ul {
   color: white;
 }
 
-<<<<<<< HEAD:pro/assets/css/main.css
-.swiper {
-  margin: 33px 0px 0px 0px;
-}
-
-.cardJob {
-=======
 .minipad-swiper {
   display: none;
 }
@@ -712,14 +701,11 @@ nav .main-menu li:hover > ul {
 }
 
 .category-section {
->>>>>>> 9be585abfe5fb9c5d8ee6d9821c825a9610b101d:pro/assets/css/main755cadb636d0f56cff43.css
   display: flex;
   flex-wrap: unset;
   flex-direction: row-reverse;
   justify-content: unset;
   align-content: unset;
-<<<<<<< HEAD:pro/assets/css/main.css
-=======
   align-items: flex-start;
   gap: 120px;
 }
@@ -866,13 +852,10 @@ nav .main-menu li:hover > ul {
   flex-direction: column;
   justify-content: unset;
   align-content: unset;
->>>>>>> 9be585abfe5fb9c5d8ee6d9821c825a9610b101d:pro/assets/css/main755cadb636d0f56cff43.css
   align-items: unset;
   margin: auto;
   gap: 48px;
   padding: 88px 120px;
-<<<<<<< HEAD:pro/assets/css/main.css
-=======
 }
 @media screen and (max-width: 1024px) {
   .cardJob {
@@ -883,7 +866,6 @@ nav .main-menu li:hover > ul {
   .cardJob {
     padding: 40px 30px;
   }
->>>>>>> 9be585abfe5fb9c5d8ee6d9821c825a9610b101d:pro/assets/css/main755cadb636d0f56cff43.css
 }
 
 .article {
@@ -1040,7 +1022,6 @@ nav .main-menu li:hover > ul {
 }
 .archive-tem .archive-tem-c {
   padding: 9rem 2rem 4rem;
-  margin: 0 auto;
   max-width: 1420px;
 }
 .archive-tem .archive-tem-c .archive {
@@ -1269,7 +1250,6 @@ nav .main-menu li:hover > ul {
   height: 60px;
   padding: 0.5rem 1rem;
   margin: 2rem 0;
-  border-radius: 8px;
   filter: drop-shadow(0px 3.81395px 3.81395px rgba(0, 0, 0, 0.25));
 }
 @media screen and (max-width: 480px) {
@@ -1277,6 +1257,147 @@ nav .main-menu li:hover > ul {
     height: 600px;
   }
 }
+.application-wrapper .application-container .btn {
+  width: 160px;
+  height: 50px;
+  padding: 0.5rem 1rem;
+  margin: 2rem 0;
+}
+.application-wrapper .application-container p.h2 {
+  margin-bottom: 0;
+}
+.application-wrapper .application-container .brand-category {
+  background: #F7F1E7;
+}
+.application-wrapper .application-container .brand-category .section-title {
+  max-width: 960px;
+  padding: 8rem 2rem;
+}
+.application-wrapper .application-container .info {
+  background: #F7F1E7;
+}
+.application-wrapper .application-container .info .container {
+  max-width: 1200px;
+  padding: 3rem;
+}
+.application-wrapper .application-container .info .container .section-title {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: space-between;
+  align-content: unset;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.application-wrapper .application-container .info .container .bottom {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: unset;
+  gap: 90px;
+}
+.application-wrapper .application-container .info .container .bottom .col-1 {
+  flex: 0.3;
+}
+.application-wrapper .application-container .info .container .bottom .col-2 {
+  flex: 0.7;
+}
+.application-wrapper .application-container .info .container .bottom .row {
+  margin-bottom: 2.5rem;
+}
+.application-wrapper .application-container .info .container .bottom .row h5, .application-wrapper .application-container .info .container .bottom .row p {
+  margin-bottom: 1rem;
+}
+.application-wrapper .application-container .info .container .bottom .row h5:not(p), .application-wrapper .application-container .info .container .bottom .row p:not(p) {
+  color: #C15E0B;
+}
+.application-wrapper .application-container .info .container .bottom .row p.p1 {
+  color: #000000;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-align: justify;
+}
+.application-wrapper .application-container .info .container .bottom .row p.p1 .red {
+  color: #EF6261;
+  font-weight: 500;
+}
+.application-wrapper .application-container .info .container .bottom .row p.p1 .fw-300 {
+  font-weight: 300;
+}
+.application-wrapper .application-container .info .container .bottom .row b {
+  font-weight: 500;
+}
+.application-wrapper .application-container .info .container .bottom .row ol {
+  list-style: auto;
+  padding-left: 2rem;
+  color: #000000;
+}
+.application-wrapper .application-container .info .container .bottom .row ol li {
+  letter-spacing: 1px;
+  margin-bottom: 1rem;
+  text-align: justify;
+}
+.application-wrapper .application-container .info .container .bottom .row ol li::marker {
+  padding-left: 1rem;
+}
+@media screen and (max-width: 1024px) {
+  .application-wrapper .application-container .info .container .bottom {
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .application-wrapper .application-container .info .container .bottom .col {
+    flex: unset;
+    flex-basis: 100%;
+  }
+}
+.application-wrapper .application-container .brand-list .container {
+  max-width: 1420px;
+  padding: 8rem 2rem;
+}
+.application-wrapper .application-container .brand-list .container .section-title {
+  padding-bottom: 3rem;
+  border-bottom: 1px solid #DDD0C5;
+}
+.application-wrapper .application-container .brand-list .container .bottom {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 30px;
+  padding-top: 3rem;
+}
+.application-wrapper .application-container .brand-list .container .bottom .brand-cover {
+  aspect-ratio: 4/3;
+}
+.application-wrapper .application-container .brand-list .container .bottom .brand-cover img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.application-wrapper .application-container .brand-list .container .bottom .brand-info {
+  text-align: left;
+  background: #F7F1E7;
+  padding: 2.5rem 1.5rem;
+}
+.application-wrapper .application-container .brand-list .container .bottom .brand-info .brand-logo {
+  position: absolute;
+  top: -40px;
+  right: unset;
+  bottom: unset;
+  left: 24px;
+  z-index: 0;
+  width: 100%;
+  max-width: 50px;
+  padding: 0.5rem;
+  background: white;
+  border-radius: 5px;
+}
+.application-wrapper .application-container .brand-list .container .bottom .brand-info p.b-category {
+  color: #DD4B4B;
+  margin-bottom: 1rem;
+}
+
 * {
   font-family: "Noto Sans TC", sans-serif, Arial, "Font Awesome 6 Free" !important;
 }
@@ -1342,14 +1463,13 @@ h5, .h5 {
 p, .p1 {
   font-size: 19px;
   font-weight: 300;
-  line-height: 120%;
+  line-height: 1.7;
   letter-spacing: 0.01em;
   color: #505050;
 }
 @media screen and (max-width: 768px) {
   p, .p1 {
     font-size: 18px;
-    line-height: 110%;
   }
 }
 
@@ -1383,6 +1503,7 @@ p, .p1 {
   font-weight: 700;
   line-height: 120%;
   letter-spacing: 0.01em;
+  border-radius: 8px;
   color: white;
   background: #EF6261;
   transition: all ease 0.4s;
@@ -1515,13 +1636,6 @@ input:focus, select:focus {
   }
 }
 
-<<<<<<< HEAD
-=======
-<<<<<<<< HEAD:pro/assets/css/main.css
-/*# sourceMappingURL=main.css.map*/
-========
->>>>>>> e3282d9b06722d95bf034c5c849da1aba33b2889
-<<<<<<< HEAD:pro/assets/css/main.css
 .classBtn {
   display: flex;
   align-items: center;
@@ -1552,15 +1666,7 @@ input:focus, select:focus {
 .classBtn button {
   flex-basis: 10%;
   height: 47px;
-  flex-basis: 10%;
   border-radius: 8px;
 }
 
 /*# sourceMappingURL=main.css.map*/
-=======
-/*# sourceMappingURL=main755cadb636d0f56cff43.css.map*/
->>>>>>> 9be585abfe5fb9c5d8ee6d9821c825a9610b101d:pro/assets/css/main755cadb636d0f56cff43.css
-<<<<<<< HEAD
-=======
->>>>>>>> e3282d9b06722d95bf034c5c849da1aba33b2889:pro/assets/css/main755cadb636d0f56cff43.css
->>>>>>> e3282d9b06722d95bf034c5c849da1aba33b2889
