--- a/src/sass/page/_archive-coverage.scss
+++ b/src/sass/page/_archive-coverage.scss
@@ -5,7 +5,7 @@
         @extend %page-content;
         @extend %tac;
         padding: 9rem 2rem 4rem;
-        margin: 0 auto;
+        // margin: 0 auto;
         max-width: 1420px;
 
         .archive {
