--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -87,13 +87,13 @@ h5, .h5{
 p, .p1{
     font-size: $p1;
     font-weight: 300;
-    line-height: 120%;
+    line-height: 1.7;
     letter-spacing: 0.01em;
     color: $c-gray;
     
     @include mini-pad{
         font-size: $m-p1;
-        line-height: 110%;
+        // line-height: 110%;
     }
 }
 
@@ -125,10 +125,12 @@ p, .p1{
 // 按鈕樣式
 .btn{
     @extend %pointer;
+    @extend %bb;
     font-size: $p2;
     font-weight: 700;
     line-height: 120%;
     letter-spacing: 0.01em;
+    border-radius: 8px;
     color:$c-white;
     background: $c-primary;
     transition: all ease .4s;
@@ -284,7 +286,6 @@ input,select{
     button {
         @include f-flexBasis(10%);
         height: 47px;
-        flex-basis: 10%;
         border-radius: 8px;
     }
 }
